--- a/button/index.html
+++ b/button/index.html
@@ -30,7 +30,7 @@
 
   <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg" class="img-responsive" alt="Tuxedo cats running on dirt ground.">
   
-  <button class="btn btn-default btn-block">Like</button>
+  <button class="btn btn-primary btn-block">Like</button>
   
   <p>Things cats love:</p>
   <ul>
