btn-danger btn-info

--- a/button/index.html
+++ b/button/index.html
@@ -31,6 +31,8 @@
   <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg" class="img-responsive" alt="Tuxedo cats running on dirt ground.">
   
   <button class="btn btn-primary btn-block">Like</button>
+  <button class="btn btn-info btn-block">Info</button>
+  <button class="btn btn-danger btn-block">Delete</button>
   
   <p>Things cats love:</p>
   <ul>
